[package]
name = "hyaline-smr"
version = "0.1.0"
authors = ["Abishek <abishek0398@gmail.com>"]
edition = "2018"
description = "Garbage Collector(Hyaline- Safe Memory Reclaimation) for lock free data structures"
documentation = "https://docs.rs/hyaline_smr"
license = "Apache-2.0/MIT"
repository = "https://github.com/Abishek0398/hyaline-smr.git"
readme = "README.md"
keywords = ["lock-free", "garbage-collector", "hyaline", "atomic"]
categories = ["concurrency", "memory-management"]

[dependencies]
atomicdouble = "0.1.4"

[target.'cfg(loom)'.dependencies.loom]
version = "0.5"
features = ["checkpoint"]

[dev-dependencies]
rand = "0.8.4"